# skill-bench

./: .gitattributes  .gitignore  .hermes.md  PROJECT_CHARTER.md  README.md
benchmarks/: pilot-scenarios.md
data/: work_queue.json
data/sources/releases/2605.26329v1-jobbench/release/: .gitattributes  .gitignore  README.md  pyproject.toml  setup.sh  setup_opencode.sh
data/sources/releases/2605.26329v1-jobbench/release/eval/: judge.py  run_benchmark_claude_code_cli.sh  run_benchmark_codex_cli.sh  run_benchmark_opencode.sh  run_judge.sh
docs/: benchmark-design-taxonomy.md  benchmark-landscape-research-program.md  compounding-system.md  incentive-design.md  production-agent-systems.md  research-agenda.md  research-synthesis-index.md  self-improvement-ledger.md  state-of-the-art-map.md
papers/: README.md  topic-index.md
pilots/: vendor_incident_response_import.py
schemas/: CLEAN_RELEASE_GATE.md  COMPOUNDING_LESSONS.md  EVIDENCE_ACQUISITION_EPISODES.md  EXPERTISE_TRANSFER.md  EXPERT_PARTICIPATION.md  FREEZE_CUSTODY.md  INFORMATION_FLOW_ENTITLEMENTS.md  LONGITUDINAL_EVALUATION.md  METRIC_MONITORING.md  PLURAL_JUDGMENT.md  PROCEDURE_GENERATION_OUTPUT.md  PROCEDURE_INSTRUMENT_LAYERS.md  PROCEDURE_PACKAGE.md  PROVENANCE_BOUNDARIES.md  README.md  REFERENCE_OBSERVABILITY.md  TASK_HEALTH.md  VALIDITY_ARGUMENTS.md  ablation-preflight.schema.json  benchmark-bundle.schema.json  clean-release-manifest.schema.json  compounding-lessons.schema.json  evidence-acquisition-episode.schema.json  expert-participation.schema.json  expertise-transfer.schema.json  task-health.schema.json  (+11 more)
(+4205 files in other folders)
